bases/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: k3s.io/hostname
                    operator: In
                    values:
                      - mimikyu
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin
          resources:
            requests:
              memory: "1Gi"
              cpu: "2"
            limits:
              memory: "16Gi"
              cpu: "8"
          ports:
            - containerPort: 8096 #is used by default for HTTP traffic. You can change this in the dashboard.
              name: http-ui
              hostPort: 8096
            - containerPort: 8920 #is used by default for HTTPS traffic. You can change this in the dashboard.
              name: https-ui
              hostPort: 8920
            - containerPort: 1900 #is used for service auto-discovery. This is not configurable.
              name: udp-svc-auto
              hostPort: 1900
              protocol: UDP
            - containerPort: 7359 #is also used for auto-discovery. This is not configurable.
              name: udp-auto
              hostPort: 7359
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: http-ui
            initialDelaySeconds: 10
            timeoutSeconds: 2
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              scheme: HTTP
              port: http-ui
            initialDelaySeconds: 10
            timeoutSeconds: 2
            successThreshold: 5
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/deadpool
              name: media
      volumes:
        - name: media
          hostPath:
            path: /media/deadpool/
            type: Directory
        - name: config
          hostPath:
            path: /media/deadpool/docker/media-server/jellyfin
            type: DirectoryOrCreate
