bases/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
    - name: tcp
      nodePort: 32686
      port: 8096
